--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
         <link rel="icon" href="images/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
+        <meta property="og:image" content="images/thumnail.png" />
+        <meta property="og:URL" content="images/thumnail.png" />
         <meta name="description" content="It's fine." />
+        <meta property="og:image:type" content="image/png" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
